Fixing issue overflow in chatbow

--- a/chat/static/chat/scss/style.scss
+++ b/chat/static/chat/scss/style.scss
@@ -339,6 +339,7 @@ a:hover {
         bottom: 150px;
         width: 100%;
         overflow-y: scroll;
+        word-break: break-all;
 
         #loader {
             width: 12px; 
